--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>React.Js</h3>
+                  <h3>React Js</h3>
                 </div>
               </article>
               <article>
